--- a/gaotian-2023puzzle.ipynb
+++ b/gaotian-2023puzzle.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,21 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "digits = [\n",
+    "digits = '\\n'.join([\n",
     "    '0068bc763',\n",
-    "    '46a' + ans['Oct'][3] + 'afc' + ans['Oct'][4] + 'e',\n",
-    "    '7' + ans['Oct'][0] + '959e7dc',\n",
-    "    '8d89' + ans['Oct'][1] + 'e' + ans['Oct'][2] + ans['Oct'][1] + '1',\n",
+    "    '46a{3}afc{4}e',\n",
+    "    '7{0}959e7dc',\n",
+    "    '8d89{1}e{2}{1}1',\n",
     "    'eac9ecd84',\n",
-    "    '2d' + ans['Oct'][4] + '6f919a',\n",
-    "    'c' + ans['Oct'][0] + '75d7' + ans['Oct'][2] + '1' + ans['Oct'][3],\n",
+    "    '2d{4}6f919a',\n",
+    "    'c{0}75d7{2}1{3}',\n",
     "    '43eba4f61'\n",
-    "]\n",
-    "grid = [[int(d, 16) for d in row] for row in digits]\n",
+    "    ]).format(*ans['Oct'])\n",
+    "grid = [[int(d, 16) for d in row] for row in digits.split()]\n",
     "\n",
     "def minCostRoute(grid: List[int]) -> str:\n",
     "    # 动态规划\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
     "    ('May', 5, 23),\n",
     "    ('Aug', 1, 3),\n",
     "    ('Jul', 11, 2)\n",
-    "]\n",
+    "    ]\n",
     "blessing = ''.join(chr(int(ans[month][idx1-1] + ans[month][idx2-1], 16)) for month, idx1, idx2 in sequence)\n",
     "# print(blessing)"
    ]
@@ -491,7 +491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -505,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
