Perf: Better algorithm.

--- a/gaotian-2023puzzle.ipynb
+++ b/gaotian-2023puzzle.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,11 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "digits = '\\n'.join([\n",
+    "digits = [\n",
     "    '0068bc763',\n",
     "    '46a{3}afc{4}e',\n",
     "    '7{0}959e7dc',\n",
@@ -375,28 +375,30 @@
     "    '2d{4}6f919a',\n",
     "    'c{0}75d7{2}1{3}',\n",
     "    '43eba4f61'\n",
-    "    ]).format(*ans['Oct'])\n",
-    "grid = [[int(d, 16) for d in row] for row in digits.split()]\n",
+    "    ]\n",
+    "for i in range(len(digits)):\n",
+    "    digits[i] = digits[i].format(*ans['Oct'])\n",
+    "grid = [[int(d, 16) for d in row] for row in digits]\n",
     "\n",
-    "def minCostRoute(grid: List[int]) -> str:\n",
+    "def minCostRoute(grid: List[int]) -> List[Tuple[int, int]]:\n",
     "    # 动态规划\n",
     "    rows = len(grid)\n",
     "    cols = len(grid[0])\n",
-    "    curr = [[0] * cols for _ in range(rows)] # 到达当前格子的最小代价\n",
     "    step = [[(0, 0)] * cols for _ in range(rows)] # 到达当前格子代价最小的上一步走法\n",
+    "    # 到达当前格子的最小代价，直接原地操作\n",
     "    for i in range(1, rows):\n",
-    "        curr[i][0] = curr[i-1][0] + grid[i][0]\n",
+    "        grid[i][0] += grid[i-1][0]\n",
     "        step[i][0] = (i-1, 0)\n",
     "    for j in range(1, cols):\n",
-    "        curr[0][j] = curr[0][j-1] + grid[0][j]\n",
+    "        grid[0][j] += grid[0][j-1]\n",
     "        step[0][j] = (0, j-1)\n",
     "    for i in range(1, rows):\n",
     "        for j in range(1, cols):\n",
-    "            if curr[i-1][j] < curr[i][j-1]:\n",
-    "                curr[i][j] = curr[i-1][j] + grid[i][j]\n",
+    "            if grid[i-1][j] < grid[i][j-1]:\n",
+    "                grid[i][j] += grid[i-1][j]\n",
     "                step[i][j] = (i-1, j)\n",
     "            else:\n",
-    "                curr[i][j] = curr[i][j-1] + grid[i][j]\n",
+    "                grid[i][j] += grid[i][j-1]\n",
     "                step[i][j] = (i, j-1)\n",
     "\n",
     "    route = [(rows-1, cols-1)]\n",
@@ -406,9 +408,9 @@
     "            break\n",
     "        route.append(step[i][j])\n",
     "\n",
-    "    return ''.join(hex(grid[i][j])[2:] for i, j in route[::-1])\n",
+    "    return route[::-1]\n",
     "\n",
-    "ans['Nov'] = minCostRoute(grid)"
+    "ans['Nov'] = ''.join(digits[i][j] for i, j in minCostRoute(grid))"
    ]
   },
   {
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.15"
   },
   "vscode": {
    "interpreter": {
